force-app/main/default/objects/Contact/fields/Representative_Payee_Contact__c.field-meta.xml
<CustomField>
    <fullName>Representative_Payee_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Representative Payee Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts (Representative Payee Contact)</relationshipLabel>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>