force-app/main/default/objects/Contact/fields/Representative_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Representative_Phone_Number__c</fullName>
    <label>Representative Phone Number</label>
    <type>Phone</type>
</CustomField>