force-app/main/default/objects/Contact/fields/Requests_Disbursements__c.field-meta.xml
<CustomField>
    <fullName>Requests_Disbursements__c</fullName>
    <label>Requests Disbursements</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>