force-app/main/default/objects/Contact/fields/Requests_Disbursements_Other__c.field-meta.xml
<CustomField>
    <fullName>Requests_Disbursements_Other__c</fullName>
    <label>Requests Disbursements Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>