force-app/main/default/objects/Contact/fields/Required_Disbursement__c.field-meta.xml
<CustomField>
    <fullName>Required_Disbursement__c</fullName>
    <defaultValue>&quot;No&quot;</defaultValue>
    <label>Required Disbursement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>