force-app/main/default/objects/Contact/fields/Requires_Supportive_Device__c.field-meta.xml
<CustomField>
    <fullName>Requires_Supportive_Device__c</fullName>
    <inlineHelpText>For example a walker, cane, wheelchair, etc.</inlineHelpText>
    <label>Requires Supportive Device</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>