force-app/main/default/objects/Contact/fields/Residence_Organization__c.field-meta.xml
<CustomField>
    <fullName>Residence_Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Residence Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Beneficiaries</relationshipLabel>
    <relationshipName>ContactsiQRO</relationshipName>
    <type>Lookup</type>
</CustomField>