force-app/main/default/objects/Contact/fields/Safe_Hygienic_Living_Situation__c.field-meta.xml
<CustomField>
    <fullName>Safe_Hygienic_Living_Situation__c</fullName>
    <label>Safe Hygienic Living Situation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>