force-app/main/default/objects/Contact/fields/Salutation__c.field-meta.xml
<CustomField>
    <fullName>Salutation__c</fullName>
    <label>Salutation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Capt.</fullName>
            </value>
            <value>
                <fullName>CDR</fullName>
            </value>
            <value>
                <fullName>Col.</fullName>
            </value>
            <value>
                <fullName>Dr.</fullName>
            </value>
            <value>
                <fullName>Hon.</fullName>
            </value>
            <value>
                <fullName>Judge</fullName>
            </value>
            <value>
                <fullName>Major</fullName>
            </value>
            <value>
                <fullName>Mr.</fullName>
            </value>
            <value>
                <fullName>Mrs.</fullName>
            </value>
            <value>
                <fullName>Ms.</fullName>
            </value>
            <value>
                <fullName>Prof.</fullName>
            </value>
            <value>
                <fullName>Rev,</fullName>
                <label>Rev.</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>