force-app/main/default/objects/Contact/fields/Secondary_Disability__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Disability__c</fullName>
    <label>Secondary Disability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Disability</valueSetName>
    </valueSet>
</CustomField>