force-app/main/default/objects/Contact/fields/Secured_funds_from_other_sources__c.field-meta.xml
<CustomField>
    <fullName>Secured_funds_from_other_sources__c</fullName>
    <inlineHelpText>Has an effort been made to secure funds for the above requested through other sources?</inlineHelpText>
    <label>Secured funds from other sources?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>