force-app/main/default/objects/Contact/fields/Server_Documents_Link__c.field-meta.xml
<CustomField>
    <fullName>Server_Documents_Link__c</fullName>
    <label>Server Documents Link</label>
    <type>TextArea</type>
</CustomField>