force-app/main/default/objects/Contact/fields/Settlement__c.field-meta.xml
<CustomField>
    <fullName>Settlement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Settlement</label>
    <type>Checkbox</type>
</CustomField>