force-app/main/default/objects/Contact/fields/Specific_item_or_service_requested__c.field-meta.xml
<CustomField>
    <fullName>Specific_item_or_service_requested__c</fullName>
    <inlineHelpText>Briefly describe the specific item or service requested.</inlineHelpText>
    <label>Specific item or service requested</label>
    <type>TextArea</type>
</CustomField>