force-app/main/default/objects/Contact/fields/Spouse_Partner__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Partner__c</fullName>
    <label>Spouse/Partner</label>
    <length>150</length>
    <type>Text</type>
</CustomField>