force-app/main/default/objects/Contact/fields/SSDI_per_month__c.field-meta.xml
<CustomField>
    <fullName>SSDI_per_month__c</fullName>
    <label>SSDI (per month)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>