force-app/main/default/objects/Contact/fields/SSI_per_month__c.field-meta.xml
<CustomField>
    <fullName>SSI_per_month__c</fullName>
    <label>SSI (per month)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>