force-app/main/default/objects/Contact/fields/Stable_Place_of_Residence__c.field-meta.xml
<CustomField>
    <fullName>Stable_Place_of_Residence__c</fullName>
    <label>Stable Place of Residence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>