force-app/main/default/objects/Contact/fields/State_ID_Expiration__c.field-meta.xml
<CustomField>
    <fullName>State_ID_Expiration__c</fullName>
    <label>State ID Expiration</label>
    <type>Date</type>
</CustomField>