force-app/main/default/objects/Contact/fields/State_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>State_ID_Number__c</fullName>
    <label>State ID Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>