force-app/main/default/objects/Contact/fields/State_ID_State__c.field-meta.xml
<CustomField>
    <fullName>State_ID_State__c</fullName>
    <label>State ID State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>States_Abreviations</valueSetName>
    </valueSet>
</CustomField>