force-app/main/default/objects/Contact/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Active Referral Source</fullName>
            </value>
            <value>
                <fullName>Inactive Referral Source</fullName>
            </value>
            <value>
                <fullName>Active Inquiry</fullName>
            </value>
            <value>
                <fullName>Inactive Inquiry</fullName>
            </value>
            <value>
                <fullName>Applicant: Active</fullName>
            </value>
            <value>
                <fullName>Applicant: Inactive</fullName>
            </value>
            <value>
                <fullName>Active Beneficiary</fullName>
            </value>
            <value>
                <fullName>Future-Funded Beneficiary</fullName>
            </value>
            <value>
                <fullName>Future-Funded Inactive</fullName>
            </value>
            <value>
                <fullName>Inactive-Deceased</fullName>
            </value>
            <value>
                <fullName>Inactive-Insufficient Funds</fullName>
            </value>
            <value>
                <fullName>Closed-Deceased</fullName>
            </value>
            <value>
                <fullName>Closed-Insufficient Funds</fullName>
            </value>
            <value>
                <fullName>Active Non-Beneficiary</fullName>
            </value>
            <value>
                <fullName>Inactive Non-Beneficiary</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <default>true</default>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>