force-app/main/default/objects/Contact/fields/Status_of_Real_Property__c.field-meta.xml
<CustomField>
    <fullName>Status_of_Real_Property__c</fullName>
    <label>Status of Real Property</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>The property is currently occupied by someone other than the applicant</fullName>
            </value>
            <value>
                <fullName>The property is being used as rental income</fullName>
            </value>
            <value>
                <fullName>The property is vacant pending its sale</fullName>
            </value>
            <value>
                <fullName>Other (please explain)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>