force-app/main/default/objects/Contact/fields/Suffix_individual__c.field-meta.xml
<CustomField>
    <fullName>Suffix_individual__c</fullName>
    <label>Suffix</label>
    <length>40</length>
    <type>Text</type>
</CustomField>