force-app/main/default/objects/Contact/fields/Supervised_living_setting_Other__c.field-meta.xml
<CustomField>
    <fullName>Supervised_living_setting_Other__c</fullName>
    <label>Supervised living setting - Other</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>