force-app/main/default/objects/Contact/fields/Support_Person_2__c.field-meta.xml
<CustomField>
    <fullName>Support_Person_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Support Person 2</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contacts (Support Person 2)</relationshipLabel>
    <relationshipName>Contacts2</relationshipName>
    <type>Lookup</type>
</CustomField>