force-app/main/default/objects/Contact/fields/Support_Person__c.field-meta.xml
<CustomField>
    <fullName>Support_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Support Person</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contacts (Support Person)</relationshipLabel>
    <relationshipName>Contacts9</relationshipName>
    <type>Lookup</type>
</CustomField>