force-app/main/default/objects/Contact/fields/Supportive_Device_Needed__c.field-meta.xml
<CustomField>
    <fullName>Supportive_Device_Needed__c</fullName>
    <label>Supportive Device Needed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>