force-app/main/default/objects/Contact/fields/TMHP_Return_Receipt_Date__c.field-meta.xml
<CustomField>
    <fullName>TMHP_Return_Receipt_Date__c</fullName>
    <label>TMHP Return Receipt Date</label>
    <type>Date</type>
</CustomField>