force-app/main/default/objects/Contact/fields/Translator_Needed__c.field-meta.xml
<CustomField>
    <fullName>Translator_Needed__c</fullName>
    <label>Translator Needed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>