force-app/main/default/objects/Contact/fields/Truelink_Address_Id__c.field-meta.xml
<CustomField>
    <fullName>Truelink_Address_Id__c</fullName>
    <label>Truelink Address Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>