force-app/main/default/objects/Contact/fields/Truelink_Disability_Designation__c.field-meta.xml
<CustomField>
    <fullName>Truelink_Disability_Designation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Truelink Disability Designation</label>
    <referenceTo>Truelink_Disability_Designation__c</referenceTo>
    <relationshipLabel>Parties</relationshipLabel>
    <relationshipName>Parties</relationshipName>
    <type>Lookup</type>
</CustomField>