force-app/main/default/objects/Contact/fields/Trust_Property_Address__c.field-meta.xml
<CustomField>
    <fullName>Trust_Property_Address__c</fullName>
    <label>Trust Property Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>