force-app/main/default/objects/Contact/fields/Trust_Type__c.field-meta.xml
<CustomField>
    <fullName>Trust_Type__c</fullName>
    <label>Trust Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Trust_Type</valueSetName>
    </valueSet>
</CustomField>