force-app/main/default/objects/Contact/fields/Trust_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Trust_Type_Code__c</fullName>
    <formula>CASE(
    TEXT(Trust_Type__c),
    &quot;Pooled Trust I&quot;, &quot;1&quot;,
    &quot;Pooled Trust II&quot;, &quot;2&quot;,
    &quot;Private Trust I&quot;, &quot;6&quot;,
    &quot;Private Trust II&quot;, &quot;7&quot;,
    &quot;MSA&quot;, &quot;2&quot;,
    &quot;&quot;
)</formula>
    <label>Trust Type Code</label>
    <type>Text</type>
</CustomField>