force-app/main/default/objects/Contact/fields/Type_of_Assistance_Requested__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Assistance_Requested__c</fullName>
    <label>Type of Assistance Requested</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Medical and dental care and equipment</fullName>
            </value>
            <value>
                <fullName>Rehabilitation training, services or devices</fullName>
            </value>
            <value>
                <fullName>Supplemental education assistance</fullName>
            </value>
            <value>
                <fullName>Home repairs and maintenance</fullName>
            </value>
            <value>
                <fullName>Transportation/auto repairs and maintenance</fullName>
            </value>
            <value>
                <fullName>Personal goods and services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>