force-app/main/default/objects/Contact/fields/Type_of_Practice__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Practice__c</fullName>
    <label>Type of Practice</label>
    <length>100</length>
    <type>Text</type>
</CustomField>