force-app/main/default/objects/Contact/fields/Update_All_Address_Fields__c.field-meta.xml
<CustomField>
    <fullName>Update_All_Address_Fields__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checking this box will push all address fields and force them to update in Salesforce.</inlineHelpText>
    <label>Update All Address Fields In True Link</label>
    <type>Checkbox</type>
</CustomField>