force-app/main/default/objects/Contact/fields/Update_True_Link__c.field-meta.xml
<CustomField>
    <fullName>Update_True_Link__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update True Link</label>
    <type>Checkbox</type>
</CustomField>