force-app/main/default/objects/Contact/fields/Vehicle_Owned_in_Beneficiary_s_Name__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Owned_in_Beneficiary_s_Name__c</fullName>
    <label>Vehicle Owned in Beneficiary&apos;s Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>