force-app/main/default/objects/Contact/fields/Wants_Care_Manager__c.field-meta.xml
<CustomField>
    <fullName>Wants_Care_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wants Care Manager</label>
    <type>Checkbox</type>
</CustomField>