force-app/main/default/objects/Contact/fields/Welcome_Letter_Signed__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Letter_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Welcome Letter Signed</label>
    <type>Checkbox</type>
</CustomField>