force-app/main/default/objects/Contact/fields/Welcome_Package_Sent__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Package_Sent__c</fullName>
    <label>Welcome Package Sent</label>
    <type>Date</type>
</CustomField>