force-app/main/default/objects/Contact/fields/Will_Receipt_Date__c.field-meta.xml
<CustomField>
    <fullName>Will_Receipt_Date__c</fullName>
    <label>Will Receipt Date</label>
    <type>Date</type>
</CustomField>