force-app/main/default/objects/Contact/fields/X18_Digit_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>X18_Digit_Account_ID__c</fullName>
    <formula>CASESAFEID(AccountId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>18 Digit Account ID</label>
    <type>Text</type>
</CustomField>