force-app/main/default/objects/Contact/fields/X18_Digit_Organization_ID__c.field-meta.xml
<CustomField>
    <fullName>X18_Digit_Organization_ID__c</fullName>
    <formula>casesafeid(Account.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>18 Digit Organization ID</label>
    <type>Text</type>
</CustomField>