force-app/main/default/objects/Contact/fields/XPersonal_Relationship_to_Beneficiary__c.field-meta.xml
<CustomField>
    <fullName>XPersonal_Relationship_to_Beneficiary__c</fullName>
    <label>XPersonal Relationship to Beneficiary</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adoptive Parent</fullName>
            </value>
            <value>
                <fullName>Aunt</fullName>
            </value>
            <value>
                <fullName>Brother</fullName>
            </value>
            <value>
                <fullName>Cousin</fullName>
            </value>
            <value>
                <fullName>Daughter</fullName>
            </value>
            <value>
                <fullName>Father</fullName>
            </value>
            <value>
                <fullName>Friend</fullName>
            </value>
            <value>
                <fullName>Grandparent</fullName>
            </value>
            <value>
                <fullName>Mother</fullName>
            </value>
            <value>
                <fullName>Nephew</fullName>
            </value>
            <value>
                <fullName>Niece</fullName>
            </value>
            <value>
                <fullName>Other Family Member</fullName>
            </value>
            <value>
                <fullName>Remainder Person</fullName>
            </value>
            <value>
                <fullName>Self</fullName>
            </value>
            <value>
                <fullName>Sister</fullName>
            </value>
            <value>
                <fullName>Son</fullName>
            </value>
            <value>
                <fullName>Step Parent</fullName>
            </value>
            <value>
                <fullName>Uncle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>