force-app/main/default/objects/Contact/fields/XProfessional_Relationship_to_Bene__c.field-meta.xml
<CustomField>
    <fullName>XProfessional_Relationship_to_Bene__c</fullName>
    <label>XProfessional Relationship to Bene</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Attorney</fullName>
            </value>
            <value>
                <fullName>Guardian</fullName>
            </value>
            <value>
                <fullName>Power of Attorney</fullName>
            </value>
            <value>
                <fullName>Representative Payee</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>