force-app/main/default/objects/Contact/fields/Year_Last_2_Digits__c.field-meta.xml
<CustomField>
    <fullName>Year_Last_2_Digits__c</fullName>
    <description>This field is used in a Flow to extract the last two digits of the year as part of the Beneficiary ID generation process.</description>
    <formula>RIGHT(TEXT(YEAR(DATEVALUE(CreatedDate))), 2)</formula>
    <label>Year Last 2 Digits</label>
    <type>Text</type>
</CustomField>