force-app/main/default/objects/Contact/recordTypes/Beneficiary.recordType-meta.xml
<RecordType>
    <fullName>Beneficiary</fullName>
    <active>true</active>
    <label>Beneficiary</label>
</RecordType>