force-app/main/default/objects/Contact/validationRules/Only_System_Admins_can_update_SSN.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_System_Admins_can_update_SSN</fullName>
    <active>true</active>
    <description>Only System Admins can update SSN</description>
    <errorConditionFormula>AND($User.ProfileId != /*System Admin*/&quot;00eHp000003fzMZ&quot;, 
!ISBLANK(PRIORVALUE(Social_Security_Number__c)), ISCHANGED(Social_Security_Number__c))</errorConditionFormula>
    <errorMessage>Only System Administrators can modify a Social Security Number</errorMessage>
</ValidationRule>